--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,15 @@
         "ext-iconv": "*",
         "guzzlehttp/guzzle": "^6.3",
         "kevinrob/guzzle-cache-middleware": "^3.2",
+        "knplabs/knp-paginator-bundle": "^2.8",
+        "liip/imagine-bundle": "^2.1",
         "symfony/console": "*",
         "symfony/debug": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
         "symfony/orm-pack": "^1.0",
+        "symfony/templating": "*",
+        "symfony/translation": "*",
         "symfony/twig-bundle": "*",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "*"
