--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dev": "encore dev",
     "watch": "encore dev --watch",
     "build": "encore production"
+  },
+  "dependencies": {
+    "slick-carousel": "^1.8.1"
   }
 }
